# Reloj

./: bitmap.xcf  bitmap_small.xcf  readme.md  window.py
esp32EINK/: esp32EINK.ino  esp32EINK.ino_test  font.c  font.h  gui_utils.cpp  gui_utils.h  hora.cpp  hora.h  platformio.ini  web_utils.cpp  web_utils.h
esp32EINK/src/: ImageData.c  arduino_secrets.h  esp32EINK.ino  font.c  font.h  gui_utils.cpp  gui_utils.h  hora.cpp  hora.h  web_utils.cpp  web_utils.h
hora/: hora.ino
pythonServer/: .gitignore  crypto_data.db  database.py  image_processor.py  install_service.sh  main.py  pyproject.toml  reloj.service  spotify_client.py
pythonServer/spotify_test/: image.py  plot.py  spotify.py
tests/: floyd.py  hora.h  hora.ino  main.cpp
